_source/css/logz-docs.css
/* ... */
div.search-container svg {
  position: absolute;
  top: 35%;
  margin-left: 10px;
  vertical-align: middle;
  z-index: 1;
}

.hidden {
  display: none;
}

div.search-results-header {
  position: fixed;
  top: 50px;
  bottom: 15px;
  padding: 1rem;
  width: 75%;
  left: 50%;
  margin-left: -37.5%;

  background-color: var(--background-very-light);
  border: 1px solid var(--text-normal);
  border-radius: 3px;
  z-index: 500;

  overflow: auto !important;
}

div.search-results-header > p {
  padding: 0;
  margin: 0;
  font-size: .75rem;
  color: var(--text-light);
  font-style: italic;
}

div.search-results-header > ul {
  list-style: none;
  padding: 0;
}

li.lunrsearchresult {
  line-height: 1.15rem;
  margin-bottom: 1rem;
}

li.lunrsearchresult .title {
  /* font-size: 1rem; */
  font-weight: 700;
}

li.lunrsearchresult .body {
  font-size: .85rem;
  line-height: 1.15rem;
}

li.lunrsearchresult .url {
  font-size: .75rem;
}

/* ===== PAGE FLAGS ===== */

/* Flags for admin-only or beta feature */

div.page-flags {
  display: flex;
  flex-flow: row wrap;
  justify-content: space-between;

  font-weight: 300;
  font-size: .75rem;
  line-height: 1rem;
}

.flag {
  display: inline-block;
  border-radius: 15px;
  width: fit-content;
  padding: 0 .35rem;
  margin-top: 16px;
}

.flag.admin {
  color: var(--infobox-note);
  border: 1px solid currentColor;
}

.flag.beta {
  color: var(--infobox-important);
  border: 1px solid currentColor;
}

/* feature boxes */

div.feature-box {
  width: fit-content;
  display: flex;
  flex-flow: row nowrap;
  justify-content: space-around;
  align-items: baseline;
}

div.feature-box > span {
  margin-left: 10px;
  padding: 0;
  color: var(--border-light);
}

.feature-box.community .community-plan {
  color: #5eb4e5;
  font-weight: 700;
}

.feature-box.pro .pro-plan, .feature-box.community .pro-plan {
  color: #ffbd1f;
  font-weight: 700;
}

.feature-box.enterprise .enterprise-plan, .feature-box.pro .enterprise-plan, .feature-box.community .enterprise-plan {
  color: #53cbb2;
  font-weight: 700;
}

/* ===== INFO BOXES ===== */

div.info-box {
  width: 450px;
  margin: 2rem auto;
  border-radius: 2px;
  padding: 10px;
}

div.info-box ul {
  padding-left: 20px;
}

div.info-box > p::before {
  font-weight: 700;
  color: white;

  display: block;
  width: fit-content;
  margin: auto auto 10px -20px;
  padding-left: 20px;
  padding-right: 15px;
}

div.info-box > p {
  margin: 0;
  font-size: .85rem;
  line-height: 1.2rem;
}

div.info-box > p > p {
  margin-top: .5rem;
  margin-bottom: 0;
}

/* .warning */
div.info-box.warning {
  background-color: var(--infobox-warning-light);
}

div.info-box.warning > p::before {
  content: "Warning   ";
  background-color: var(--infobox-warning);
}

/* .note */
div.info-box.note {
  background-color: var(--infobox-note-light);
}

div.info-box.note > p::before {
  content: "Note   ";
  background-color: var(--infobox-note);
}

div.info-box.note.notes > p::before {
  content: "Notes";
}

/* .gotcha, .important */
div.info-box.gotcha, div.info-box.important {
  background-color: var(--infobox-important-light);
}

div.info-box.gotcha > p::before, div.info-box.important > p::before {
  content: "Important   ";
  background-color: var(--infobox-important);
}

/* .tip */
div.info-box.tip {
  background-color: var(--infobox-tip-light);
}

div.info-box.tip > p::before {
  content: "Pro Tip   ";
  background-color: var(--infobox-tip);
}

/* .tip */
div.info-box.read {
  background-color: var(--infobox-read-light);
}

div.info-box.read > p::before {
  content: "Read more   ";
  background-color: var(--infobox-read);
}


div#toc-collapse-btn {
  min-width: 50px;
  height: 44px;
  text-align: center;
  vertical-align: center;
  display: none;
}

div#toc-collapse-btn * {
  vertical-align: middle;
}

div.site-badge {
  min-width: 190px;
  max-width: 230px;
  min-height: 35px;
  max-height: 35px;
}

div.site-badge img {
  vertical-align: middle;
}

div.site-badge img.logz-symbol {
  display: none;
}

span.docs-home-link {
  font-family: var(--heading-font);
  font-size: 1.4rem;
  vertical-align: middle;
  margin-left: 5px;
  color: var(--logz-logo-normal);
}

span.docs-home-link a {
  color: currentColor;
}

div.site-badge a:hover {
  opacity: .5;
}

nav.site-links, nav.site-actions {
  font-size: .85rem;
}

nav.site-actions ul {
  padding-left: 0;
}

nav.site-links li, nav.site-actions li {
  display: inline-block;
  padding: 1rem;
  vertical-align: middle;
}

nav.site-links li {
  margin: auto 1rem;
  width: 1fr;
}

nav.site-actions li {
  margin: auto .25rem;
}

nav.site-links a, nav.site-actions a {
  margin: 0;
  padding: 0;
  display: block;
  text-align: center;
  color: var(--text-link-gray);
}

/* ===== SITE FOOTER ===== */

footer * {
  vertical-align: middle;
  display: inline-block;
}

footer > * {
  margin-left: auto;
  margin-right: auto;
}

footer li:not(:last-child) {
  margin-right: 1.25rem;
}



div.social-icons li.icon {
  font-size: 1.25rem;
  text-align: center;
}

div.social-icons a {
  color: var(--text-light);
}

a.atom-feed {
  color: orange !important;
}

/* ===== ALL-PAGES 1 STYLING ===== */

.toc-visibility {
  display: auto;
}

nav.all-pages-toc {
  /* positioning */
  display: block;
  height: 100%;
  margin: 0;
  top: 0;
  padding-left: 25px;

  /* text */
  color: var(--text-normal);
  font-family: var(--body-font);
}

nav.all-pages-toc ul {
  list-style: none;
  padding: 0;
  font-weight: 400;
}

ul.toc-parent {
  font-size: .75rem;
  text-transform: uppercase;
}

ul.toc-child {
  text-transform: none;
  font-size: .85rem;
}

ul.toc-grandchild {
  text-transform: none;
  font-size: .75rem;
  margin-left: 1.25rem;
  display: none;
}

span.toc-heading {
  display: block;
  padding-left: .5rem;
  margin-left: -.5rem;
}

ul.toc-parent span.toc-heading {
  margin-top: 2rem;
  margin-bottom: 0;
}

ul.toc-child span.toc-heading {
  margin-top: 0;
  padding-top: .1rem;
  padding-bottom: .1rem;
}
/* ... */

